--- a/app/views/steps/tool.html.erb
+++ b/app/views/steps/tool.html.erb
@@ -1,6 +1,6 @@
-<%= form_for @project, url: wizard_path , method: :post do |f| %>
+<%= form_for @tool, url: wizard_path, method: :put do |f| %>
   <%= f.label :tool_name %>
   <%= f.text_field :tool_name %>
   <%= f.object.errors.full_messages_for(:tool_name)&.first %>
-  <%= f.submit 'Next', name: 'Next' %>
-<%= end %>
+  <%= f.submit 'Submit' %>
+<% end %>
