--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,8 @@
 <h1>Home#index</h1>
 <p>Find me in app/views/home/index.html.erb</p>
-<%= link_to 'Start Profile Setup', wizard_path(:personal_information) %>
-                  
+<% if user_signed_in? %>
+    <%= link_to 'Sign Out', destroy_user_session_path , data: {turbo_method: :delete} %>
+<% else  %>
+      <%= link_to 'Sign In', new_user_session_path %>
+      <%= link_to 'Sign Up', new_user_registration_path %>
+<% end %>
